made contacts page

--- a/style.css
+++ b/style.css
@@ -4,6 +4,9 @@
     margin: 0;
     padding: 0;
 }
+li{
+    list-style: none;
+}
 header{
     background-color: rgb(206, 204, 204);
     text-align: center;
@@ -60,4 +63,37 @@ button{
 .proj-li{
     list-style-position:inside;
     border: 5px;
+}
+/* html { 
+    background: url(img/IMG_0858.jpeg) no-repeat center center fixed; 
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+  } */
+#bg{
+    position: fixed; 
+    top: -50%; 
+    left: -50%; 
+    width: 200%; 
+    height: 200%;
+    z-index: -1;
+    opacity: 50%;
+}
+#bg img{
+    position: absolute; 
+    top: 0; 
+    left: 0; 
+    right: 0; 
+    bottom: 0; 
+    margin: auto; 
+    min-width: 50%;
+    min-height: 50%;
+}
+.body-text{
+    margin: 4% 15% 4% 15%;
+    letter-spacing: 2px;
+}
+.info{
+    margin: 4% 0 0 0;
 }
